Cleaned up code and fixed non-default section hiding time gap

--- a/css/index.css
+++ b/css/index.css
@@ -53,6 +53,10 @@ nav#blog-filter {
   line-height: 1.8em;
 }
 
+section..non-default {
+  display: none;
+}
+
 /* blog posts */
 article {
   clear: both;
